@@ -7,6 +7,7 @@
 - 2021-05-22                                -
 ---------------------------------------------
 .: WSW: Task - Retrieve user details to place order + save inserted details (WSW-115)
+.: WSW: Task - Link the order button in website to local shopping (WSW-116)
 
 ---------------------------------------------
 - 2021-05-20                                -
